Add postgresql producer